@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/nt_base.c (NTRegistryKeyLookup): Fix SourceForge issue
+#482 &quot;NULL pointer dereference in NTRegistryKeyLookup&quot;.</li>
 <li>coders/viff.c (ReadVIFFImage): Fix SourceForge issue #481
 &quot;Memory leak in viff.c&quot;.</li>
 <li>magick/profile.c (SetImageProfile): Fix SourceForge issue #480
